# rust-discord-bot

./: Cargo.toml  README.md
.gemini/: settings.json
src/: main.rs
src/commands/: about.rs  clankerize.rs  hello.rs  mod.rs  time.rs
