[package]
name = "my_discord_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
chrono = "0.4"
chrono-tz = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
